@@ -10,6 +10,7 @@ Changes for 1.9
 
 Changes for 1.8.4rc1
 
+ - [ZBX-2827] added checks when adding or updating maintenances, so that duplicate names could not be added (KB)
  - [ZBX-2978] fixed graphs import with Y axis set to an item (Vedmak)
  - [ZBX-2507] minimal graph dimension size is set to 20 pixels (Vedmak)
  - [ZBX-2665] web scenario steps on graphs now are in correct order (Vedmak)
